# kithara

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  2026-01-19-variant-switch-fix-plan.md  AGENTS.md  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CHANGELOG.md  CLAUDE.md  CODECOV_INTEGRATION.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  COVERAGE_SETUP.md  CURRENT_ARCHITECTURE.md  Cargo.toml  GEMINI.md  Kithara.podspec  LICENSE-MIT  MOCKALL_BENEFITS.md  MOCKALL_CODECOV_PLAN.md  NEXT_STEPS.md  OPTIMIZATION_ROADMAP.md  PERFORMANCE_ANALYSIS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_BASELINE.md  PHASE4_COMPLETE.md  PHASE5_PLAN.md  Package.resolved  Package.swift  README.md  SECURITY.md  STREAM_BASED_MIGRATION_PLAN.md  TESTING.md  TEST_COVERAGE_ANALYSIS.md  TEST_INVENTORY.md  TRAITS_AUDIT.md  (+18 more)
crates/firewheel-wasm-demo/: Cargo.toml  Trunk.toml  index.html
crates/firewheel-wasm-demo/src/: lib.rs
crates/kithara-abr/: CONTEXT.md  Cargo.toml  README.md
crates/kithara-abr/benches/: abr_estimator.rs
crates/kithara-abr/src/: abr.rs  controller.rs  estimator.rs  ewma.rs  handle.rs  internal.rs  lib.rs  state.rs  types.rs
crates/kithara-abr/tests/: state.rs  state_machine.rs
crates/kithara-app/: CONTEXT.md  Cargo.toml  README.md  app.yaml  build.rs
crates/kithara-app/src/: analysis.rs  app.rs  baked.rs  config.rs  controller.rs  controls.rs  crossfade.rs  drm.rs  events.rs  frontend.rs  lib.rs  main.rs  main_gui.rs  main_tui.rs  playlist.rs  sources.rs  state.rs  theme.rs  tracing_init.rs  track.rs  tui_runner.rs  wave_cache.rs  waveform.rs
crates/kithara-app/tests/: stage_drm_burst_e2e.rs
crates/kithara-apple/: CONTEXT.md  Cargo.toml  README.md
crates/kithara-apple/src/: accelerate.rs  foundation.rs  lib.rs
crates/kithara-assets/: CONTEXT.md  Cargo.toml  README.md
crates/kithara-assets/examples/: heap_profile.rs
crates/kithara-assets/src/: acquisition.rs  asset_id.rs  backend.rs  base.rs  cache.rs  canonicalization.rs  deleter.rs  disk_store.rs  error.rs  evict.rs  eviction.rs  identity.rs  index.rs  internal.rs  key.rs  layout.rs  lease.rs  lib.rs  mem_store.rs  naming.rs  process.rs  processing.rs  resource.rs  scope.rs  state.rs  store.rs  unified.rs
crates/kithara-assets/tests/: asset_id.rs  auto_checkpoint.rs  availability_api.rs  availability_persistence.rs  canonicalization.rs  coverage_manager_contract.rs  crash_recovery.rs  ctx_erasure.rs  eviction_bytes_integration.rs  eviction_integration.rs  eviction_subscription.rs  hostile_layout.rs  inflight_sharing.rs  integration_storage_assets.rs  memory_profiling.rs  pins_index_integration.rs  processing_reopen.rs  resource_path_test.rs  resource_state.rs  shared_flush_hub.rs  streaming_resources_comprehensive.rs
crates/kithara-audio/: CONTEXT.md  Cargo.toml  README.md
crates/kithara-audio/benches/: stretch_backends.rs
crates/kithara-audio/examples/: file_audio.rs  hls_audio.rs  hls_drm_audio.rs
crates/kithara-audio/src/: audio.rs  blob.rs  events.rs  exports.rs  (+13 more)
crates/kithara-beat/: CONTEXT.md  Cargo.toml  README.md
crates/kithara-bufpool/: CONTEXT.md  Cargo.toml  README.md
crates/kithara-cache/: Cargo.toml
crates/kithara-coverage/: Cargo.toml  README.md
crates/kithara-decode/: CONTEXT.md  Cargo.toml  README.md  STREAM_ARCHITECTURE.md
crates/kithara-drm/: CONTEXT.md  Cargo.toml  README.md
crates/kithara-encode/: CONTEXT.md  Cargo.toml  README.md
crates/kithara-events/: CONTEXT.md  Cargo.toml  README.md
crates/kithara-ffi/: .wasm-slim.toml  CONTEXT.md  Cargo.toml  README.md  build.rs  index.html  uniffi.toml
crates/kithara-file/: CONTEXT.md  Cargo.toml  README.md
crates/kithara-hang-detector/: Cargo.toml  README.md
crates/kithara-hang-detector-macros/: Cargo.toml
crates/kithara-hls/: CONTEXT.md  Cargo.toml  README.md
crates/kithara-io/: Cargo.toml
crates/kithara-net/: CONTEXT.md  Cargo.toml  README.md
crates/kithara-platform/: CONTEXT.md  Cargo.toml  README.md
crates/kithara-play/: CONTEXT.md  Cargo.toml  README.md
crates/kithara-probe-macros/: Cargo.toml  README.md
examples/: Cargo.toml
examples/examples/: file_audio.rs  file_rodio.rs  hls_audio.rs  hls_drm_audio.rs  hls_rodio.rs  resource_rodio.rs
examples/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: hls_parsing.rs
tests/: Cargo.toml  README.md  build.rs  webdriver.json
tests/benches/: abr_estimator.rs  bufpool.rs  perf_audit.rs  refactor_hotpaths.rs
tests/fuzz/: Cargo.toml  FUZZ_CANDIDATES.md  README.md
tests/perf/: README.md  abr.rs  decoder.rs  memory_rss.rs  pool.rs  resampler.rs  storage.rs  suite_perf.rs
tests/src/: abr_fixtures.rs  alac_fixture.rs  apple_warmup.rs  asset_fixture.rs  assets_ext.rs  audio_fixture.rs  audio_mock.rs  bufpool_ext.rs  consts.rs  decode_ext.rs  decode_mock.rs  e2e.rs  encode_ext.rs  encode_test_pcm.rs  fixture_cache.rs  fixture_protocol.rs  fixtures.rs  flash_pace.rs  hls_blob_store.rs  hls_server.rs  hls_spec.rs  hls_test_helpers.rs  lib.rs  memory_source.rs  net_fixture.rs  pcm_provenance.rs  reads.rs  rfc6381.rs  rng.rs  signal_pcm.rs  signal_source.rs  signal_source_utils.rs  signal_spec.rs  signal_url.rs  storage_ext.rs  swallow_detector.rs  test_server.rs  waits.rs  wav.rs
tests/tests/: browser_runner_smoke.rs  env_guard.rs  events.rs  flash_lexical.rs  integration.rs  loom.rs  no_block.rs  red_env_guard_leak_thread.rs  suite_e2e.rs  suite_heavy.rs  suite_light.rs  suite_stress.rs  suite_wasm.rs  thread_budget.rs  timeout_guard.rs  worker.rs
xtask/: Cargo.toml  README.md  agent-hook  trait-mock-exceptions.txt
xtask-core/: Cargo.toml  README.md
xtask-core/src/: ast_grep.rs  ctx.rs  lib.rs  util.rs
xtask-core/tests/: config_contract.rs
xtask/src/: agent_hook.rs  android.rs  apple.rs  apple_docgen.rs  arch.rs  ast_grep.rs  config.rs  format.rs  health.rs  lint.rs  main.rs  manifest.rs  orphans.rs  perf_compare.rs  publish.rs  quality.rs  release.rs  scope.rs  similarity.rs  test.rs  typos.rs  util.rs  viz.rs  wasm.rs  xcframework.rs
xtask/tests/: agent_hook_runner.rs  self_cache_runner.rs
(+3401 files in other folders)
