[workspace]
resolver = "2"
members = [
    "crates/kithara",
    "crates/kithara-abr",
    "crates/kithara-drm",
    "crates/kithara-events",
    "crates/kithara-net",
    "crates/kithara-file",
    "crates/kithara-hls",
    "crates/kithara-audio",
    "crates/kithara-decode",
    "crates/kithara-stream",
    "crates/kithara-storage",
    "crates/kithara-assets",
    "crates/kithara-bufpool",
    "tests",
]

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
allow_attributes = "deny"
doc_markdown = "warn"
default_trait_access = "warn"
ignored_unit_patterns = "warn"
semicolon_if_nothing_returned = "warn"
missing_fields_in_debug = "warn"
use_self = "warn"
impl_trait_in_params = "warn"
missing_panics_doc = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
manual_let_else = "warn"
needless_pass_by_value = "warn"
trivially_copy_pass_by_ref = "warn"
inconsistent_struct_constructor = "warn"
map_unwrap_or = "warn"
mut_mut = "warn"
needless_for_each = "warn"
match_wildcard_for_single_variants = "warn"

[workspace.metadata.kithara]
# Single place to document workspace-wide tool expectations.
# Actual enforcement is done via files at the repo root:
# - rustfmt.toml
# - clippy.toml
# - deny.toml
tools = { rustfmt = "rustfmt.toml", clippy = "clippy.toml", deny = "deny.toml" }

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["kithara contributors"]
license = "MIT OR Apache-2.0"
description = "Networking + decoding building blocks for audio playback (not a full player)"
keywords = ["audio", "streaming", "hls", "decoder", "playback"]
categories = ["multimedia::audio"]
repository = "https://github.com/zvuk/kithara"
homepage = "https://github.com/zvuk/kithara"

# Workspace-first dependency policy:
# - Add all dependency versions here.
# - In crate Cargo.toml files use `{ workspace = true }`.
[workspace.dependencies]
# workspace crates (path deps)
kithara = { path = "crates/kithara", version = "0.1.0" }
kithara-abr = { path = "crates/kithara-abr", version = "0.1.0" }
kithara-assets = { path = "crates/kithara-assets", version = "0.1.0" }
kithara-bufpool = { path = "crates/kithara-bufpool", version = "0.1.0" }
kithara-audio = { path = "crates/kithara-audio", version = "0.1.0" }
kithara-decode = { path = "crates/kithara-decode", version = "0.1.0" }
kithara-drm = { path = "crates/kithara-drm", version = "0.1.0" }
kithara-events = { path = "crates/kithara-events", version = "0.1.0" }
kithara-file = { path = "crates/kithara-file", version = "0.1.0" }
kithara-hls = { path = "crates/kithara-hls", version = "0.1.0" }
kithara-net = { path = "crates/kithara-net", version = "0.1.0" }
kithara-storage = { path = "crates/kithara-storage", version = "0.1.0" }
kithara-stream = { path = "crates/kithara-stream", version = "0.1.0" }
rstest = { version = "0.26.1", features = ["async-timeout", "crate-name"] }
serial_test = "3.3.1"
unimock = { version = "0.6", features = ["std"] }

# async/runtime
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }
tokio-stream = "0.1.18"
futures = "0.3.31"

# thread pool
rayon = "1.10"

# channels/buffers
kanal = "0.1.1"
bytes = "1.11.1"
ringbuf = "0.4.8"
async-stream = "0.3.6"
parking_lot = "0.12"
crossbeam-queue = "0.3"

# http/url
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "stream"] }
url = "2.5.8"
axum = "0.8.8"

# hls parsing
hls_m3u8 = "0.5.1"

# iterators
fallible-iterator = "0.3"

# decoding
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", branch="dev-0.6", features = ["all", "opt-simd"] }
dasp = { version = "0.11", features = ["interpolate", "interpolate-linear", "signal"] }
rodio = "0.21.1"
rubato = "1.0"
audioadapter-buffers = "2.0"
smallvec = "1"

# errors/logging/metrics
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

# serialization
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }

# hex encoding
hex = "0.4"

# misc
aes = "0.8.4"
cbc = "0.1.2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10.9"
tower = "0.5.3"
tempfile = "3.25.0"

# async traits
async-trait = "0.1.89"

# storage (range maps + mmap)
rangemap = { version = "1.7.1", features = ["serde1"] }
mmap-io = { version = "0.9", default-features = false }
dashmap = "6.1.0"
lru = "0.16"

# memory profiling
dhat = "0.3"
memory-stats = "1.2"

# performance monitoring
hotpath = "0.10.1"

# fast interleave/deinterleave
fast-interleave = "0.1"

# Apple platform support
core-foundation = "0.10"
core-foundation-sys = "0.8"

# Optional: unify lint settings later via workspace.metadata or deny.toml.
