[workspace]
resolver = "2"
members = [
    "crates/kithara",
    "crates/kithara-abr",
    "crates/kithara-drm",
    "crates/kithara-events",
    "crates/kithara-net",
    "crates/kithara-file",
    "crates/kithara-hls",
    "crates/kithara-audio",
    "crates/kithara-encode",
    "crates/kithara-decode",
    "crates/kithara-stream",
    "crates/kithara-storage",
    "crates/kithara-assets",
    "crates/kithara-bufpool",
    "crates/kithara-platform",
    "crates/kithara-play",
    "crates/kithara-queue",
    "crates/kithara-test-utils",
    "crates/kithara-test-macros",
    "crates/kithara-app",
    "crates/kithara-ffi",
    "crates/kithara-workspace-hack",
    "tests",
    "tests/fuzz",
    "xtask",
]
default-members = [
    "crates/kithara",
    "crates/kithara-abr",
    "crates/kithara-drm",
    "crates/kithara-events",
    "crates/kithara-net",
    "crates/kithara-file",
    "crates/kithara-hls",
    "crates/kithara-audio",
    "crates/kithara-encode",
    "crates/kithara-decode",
    "crates/kithara-stream",
    "crates/kithara-storage",
    "crates/kithara-assets",
    "crates/kithara-bufpool",
    "crates/kithara-platform",
    "crates/kithara-play",
    "crates/kithara-queue",
    "crates/kithara-test-utils",
    "crates/kithara-test-macros",
    "tests",
]

[workspace.lints.rust]
unreachable_pub = "warn"
unused_qualifications = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rtsan)'] }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"
allow_attributes = "deny"
needless_range_loop = "deny"
needless_borrow = "deny"
ptr_arg = "deny"
map_identity = "deny"
needless_lifetimes = "deny"
search_is_some = "deny"
manual_map = "deny"
question_mark = "deny"
doc_markdown = "warn"
default_trait_access = "warn"
derivable_impls = "warn"
default_constructed_unit_structs = "warn"
ignored_unit_patterns = "allow"
semicolon_if_nothing_returned = "warn"
missing_fields_in_debug = "warn"
use_self = "warn"
impl_trait_in_params = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "deny"
flat_map_option = "warn"
manual_let_else = "warn"
inconsistent_struct_constructor = "warn"
map_unwrap_or = "warn"
mut_mut = "warn"
needless_for_each = "warn"
match_wildcard_for_single_variants = "warn"
redundant_else = "warn"
items_after_statements = "warn"
single_match_else = "warn"
match_same_arms = "warn"
needless_pass_by_value = "warn"
trivially_copy_pass_by_ref = "warn"
unused_self = "warn"
unnecessary_wraps = "warn"
option_if_let_else = "warn"
or_fun_call = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
must_use_candidate = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
derive_partial_eq_without_eq = "warn"
derived_hash_with_manual_eq = "warn"
partialeq_ne_impl = "warn"
non_canonical_partial_ord_impl = "warn"
derive_ord_xor_partial_ord = "warn"
inherent_to_string = "warn"
to_string_trait_impl = "warn"
significant_drop_tightening = "warn"
cognitive_complexity = "warn"
too_many_lines = "warn"
too_many_arguments = "warn"
type_complexity = "warn"
approx_constant = "warn"

[workspace.metadata.kithara]
tools = { rustfmt = "rustfmt.toml", clippy = "clippy.toml", deny = "deny.toml" }

[workspace.package]
version = "0.0.1-alpha2"
edition = "2024"
rust-version = "1.89"
authors = ["kithara contributors"]
license = "MIT OR Apache-2.0"
description = "Networking + decoding building blocks for audio playback (not a full player)"
keywords = ["audio", "streaming", "hls", "decoder", "playback"]
categories = ["multimedia::audio"]
repository = "https://github.com/zvuk/kithara"
homepage = "https://github.com/zvuk/kithara"

[workspace.dependencies]
# Backend-bearing crates: default-features disabled at the workspace
# level so apple / android xcframework builds don't transitively pull
# symphonia through the default feature set. Consumers that need the
# software backend (desktop, WASM, tests) opt in explicitly via
# `features = ["symphonia"]`. Cargo refuses default-features overrides
# through `workspace = true` inheritance, so the disable has to live
# here on the workspace declaration.
kithara = { path = "crates/kithara", version = "0.0.1-alpha2", default-features = false }
kithara-abr = { path = "crates/kithara-abr", version = "0.0.1-alpha2" }
kithara-assets = { path = "crates/kithara-assets", version = "0.0.1-alpha2" }
kithara-bufpool = { path = "crates/kithara-bufpool", version = "0.0.1-alpha2" }
kithara-audio = { path = "crates/kithara-audio", version = "0.0.1-alpha2", default-features = false }
kithara-encode = { path = "crates/kithara-encode", version = "0.0.1-alpha2" }
kithara-decode = { path = "crates/kithara-decode", version = "0.0.1-alpha2", default-features = false }
kithara-drm = { path = "crates/kithara-drm", version = "0.0.1-alpha2" }
kithara-events = { path = "crates/kithara-events", version = "0.0.1-alpha2" }
kithara-file = { path = "crates/kithara-file", version = "0.0.1-alpha2" }
kithara-hls = { path = "crates/kithara-hls", version = "0.0.1-alpha2" }
kithara-net = { path = "crates/kithara-net", version = "0.0.1-alpha2" }
kithara-platform = { path = "crates/kithara-platform", version = "0.0.1-alpha2" }
kithara-play = { path = "crates/kithara-play", version = "0.0.1-alpha2", default-features = false }
kithara-queue = { path = "crates/kithara-queue", version = "0.0.1-alpha2", default-features = false }
kithara-storage = { path = "crates/kithara-storage", version = "0.0.1-alpha2" }
kithara-stream = { path = "crates/kithara-stream", version = "0.0.1-alpha2" }
kithara-test-macros = { path = "crates/kithara-test-macros", version = "0.0.1-alpha2" }
kithara-test-utils = { path = "crates/kithara-test-utils", version = "0.0.1-alpha2" }
kithara-ffi = { path = "crates/kithara-ffi" }
kithara-app = { path = "crates/kithara-app", default-features = false }
kithara-workspace-hack = { path = "crates/kithara-workspace-hack", version = "0.0.1-alpha2" }
rstest = { version = "0.26.1", features = ["async-timeout", "crate-name"] }
serial_test = "3.4.0"
unimock = { version = "0.6", features = ["std"] }
backtrace = "0.3"
tokio = { version = "1.52.3", default-features = false, features = ["sync", "macros", "rt", "time"] }
tokio_with_wasm = { version = "0.9", features = ["full"] }
tokio-util = { version = "0.7.18", default-features = false }
tokio-stream = "0.1.18"
futures = "0.3.32"
wasm_safe_thread = "0.1.1"
parking_lot = "0.12"
arc-swap = "1.9"
bytes = "1.11.1"
ringbuf = "0.5.0"
slice_ring_buf = "0.3"
async-stream = "0.3.6"
crossbeam-queue = "0.3"
reqwest = { version = "0.13.3", default-features = false }
url = "2.5.8"
axum = "0.8.9"
hls_m3u8 = "0.7.0"
fallible-iterator = "0.3"
re_mp4 = "0.4.0"
symphonia = { version = "0.6.0", features = ["all", "opt-simd"] }
symphonia-format-isomp4 = "0.6.0"
symphonia-core = "0.6.0"
fdk-aac = "0.8.0"
fdk-aac-sys = "0.5.0"
ffmpeg-next = "8.1.0"
dasp = { version = "0.11", features = ["interpolate", "interpolate-linear", "signal"] }
ratatui = "0.30.0"
rubato = "2.0"
realfft = "3.5"
audioadapter-buffers = "3.0"
smallvec = "1"
num-traits = { version = "0.2", default-features = false }
cpal = { version = "0.17", default-features = false }
firewheel = { version = "0.10.0", default-features = false, features = ["std", "pool", "all_nodes", "musical_transport", "scheduled_events", "tracing"] }
firewheel-web-audio = { version = "0.4.0", default-features = false }
bevy_platform = { version = "0.18", default-features = false, features = ["alloc", "std", "web"] }
biquad = "0.6.0"
thunderdome = { version = "0.6.1", default-features = false }
portable-atomic = { version = "1.13.1", default-features = false, features = ["fallback", "float"] }
thiserror = "2.0.18"
usdt = { version = "0.6", default-features = false, features = ["asm"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-wasm = "0.2"
tracing-android = "0.2.0"
tracing-log = "0.2"
web-time = "1.1"
gloo-timers = { version = "0.4", features = ["futures"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Blob", "BroadcastChannel", "console", "DedicatedWorkerGlobalScope", "Document", "Element", "Event", "EventTarget", "File", "FileList", "FileReader", "HtmlElement", "HtmlInputElement", "MessageEvent", "Window"] }
send_wrapper = "0.6"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
toml = { version = "1.1", features = ["preserve_order"] }
rkyv = "0.8.16"
bytecheck = "0.8.2"

# hex encoding
hex = "0.4"

# crypto/obfuscation
crabtime = "1.1.4"
obfstr = "0.4.4"
rand = "0.10.1"

# misc
glob = "0.3"
aes = "0.9.0"
cbc = "0.2.0"
uuid = { version = "1", features = ["v5"] }
sha2 = "0.11"
tower = "0.5.3"
tower-http = { version = "0.6", features = ["cors", "fs", "set-header"] }
tempfile = "3.27.0"

# FFI
uniffi = { version = "0.31.1" }
jni = "0.22"
ndk-context = "0.1.1"
rustls-platform-verifier = "0.7.0"

# async traits
async-trait = "0.1.89"
thirtyfour = "0.37.0"

# delegation
delegate = "0.13"
bitflags = "2.11"

# proc macros
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

# storage (range maps + mmap)
rangemap = { version = "1.7.1", features = ["serde1"] }
mmap-io = { version = "1.0", default-features = false }
dashmap = "6.2.1"
moka = { version = "0.12", features = ["sync"] }
bon = "3.9"
derive_more = { version = "2.1", features = ["from"] }
lru = "0.18"

# fuzzing
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
proptest = "1"

# memory profiling
dhat = "0.3"
memory-stats = "1.2"
stats_alloc = "0.1"
assert_no_alloc = "1.1"

# performance monitoring
hotpath = "0.16.1"
criterion = "0.8.2"

# fast interleave/deinterleave
fast-interleave = "0.1"

# Apple platform support
core-foundation = "0.10"
core-foundation-sys = "0.8"

# Optional: unify lint settings later via workspace.metadata or deny.toml.

# UI frameworks
iced = { version = "0.14", features = ["tokio", "svg", "canvas"] }
iced_aw = { version = "0.14.1", default-features = false, features = ["tabs", "tab_bar", "selection_list"] }

# CLI
clap = { version = "4.6", features = ["derive", "env"] }
crossterm = "0.29"

# xtask tooling
cargo_metadata = "0.23"
anyhow = "1"
regex = "1"

# Optimise CPU-heavy audio dependencies in debug builds so the audio
# worker thread can keep up with real-time playback.  Without this,
# rubato's sinc interpolation and Symphonia's MP3 decode are ~30×
# slower in debug due to Rust's runtime UB/alignment checks.
[profile.dev.package.rubato]
opt-level = 2
[profile.dev.package.symphonia]
opt-level = 2
[profile.dev.package.symphonia-core]
opt-level = 2
[profile.dev.package.symphonia-bundle-mp3]
opt-level = 2
[profile.dev.package.symphonia-codec-aac]
opt-level = 2
[profile.dev.package.symphonia-bundle-flac]
opt-level = 2
[profile.dev.package.symphonia-format-isomp4]
opt-level = 2
[profile.dev.package.kithara-workspace-hack]
opt-level = 2

[patch.crates-io]
firewheel-web-audio = { git = "https://github.com/gerasim13/firewheel-web-audio", rev = "1a5e383af4d5d318f93d6d25e617cc95d7b20aef" }

# Best-of-both-worlds profile for maximum testing speed.
# Combines release-grade runtime performance (opt-level 3) with fast
# parallel compilation (codegen-units 16, LTO off).
[profile.test-release]
inherits = "release"
opt-level = 3
debug = "line-tables-only"
debug-assertions = true
overflow-checks = true
lto = false
codegen-units = 16

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
