[workspace]
resolver = "2"
members = [
    "crates/kithara",
    "crates/kithara-abr",
    "crates/kithara-app",
    "crates/kithara-apple",
    "crates/kithara-assets",
    "crates/kithara-audio",
    "crates/kithara-beat",
    "crates/kithara-bufpool",
    "crates/kithara-decode",
    "crates/kithara-devtools",
    "crates/kithara-drm",
    "crates/kithara-encode",
    "crates/kithara-events",
    "crates/kithara-ffi",
    "crates/kithara-file",
    "crates/kithara-hls",
    "crates/kithara-net",
    "crates/kithara-platform",
    "crates/kithara-play",
    "crates/kithara-queue",
    "crates/kithara-resampler",
    "crates/kithara-storage",
    "crates/kithara-stream",
    "crates/kithara-stretch",
    "crates/kithara-test-macros",
    "crates/kithara-test-utils",
    "crates/kithara-workspace-hack",
    "tests",
    "tests/fuzz",
    "xtask",
]
default-members = [
    "crates/kithara",
    "crates/kithara-abr",
    "crates/kithara-apple",
    "crates/kithara-drm",
    "crates/kithara-events",
    "crates/kithara-net",
    "crates/kithara-file",
    "crates/kithara-hls",
    "crates/kithara-audio",
    "crates/kithara-encode",
    "crates/kithara-decode",
    "crates/kithara-stream",
    "crates/kithara-storage",
    "crates/kithara-assets",
    "crates/kithara-bufpool",
    "crates/kithara-platform",
    "crates/kithara-play",
    "crates/kithara-queue",
    "crates/kithara-resampler",
    "crates/kithara-test-utils",
    "crates/kithara-test-macros",
    "tests",
]

[workspace.lints.rust]
unreachable_pub = "warn"
unused_qualifications = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rtsan)'] }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"
allow_attributes = "deny"
needless_range_loop = "deny"
needless_borrow = "deny"
ptr_arg = "deny"
map_identity = "deny"
needless_lifetimes = "deny"
search_is_some = "deny"
manual_map = "deny"
question_mark = "deny"
doc_markdown = "warn"
default_trait_access = "warn"
derivable_impls = "warn"
default_constructed_unit_structs = "warn"
ignored_unit_patterns = "allow"
semicolon_if_nothing_returned = "warn"
missing_fields_in_debug = "warn"
use_self = "warn"
impl_trait_in_params = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "deny"
flat_map_option = "warn"
manual_let_else = "warn"
inconsistent_struct_constructor = "warn"
map_unwrap_or = "warn"
mut_mut = "warn"
needless_for_each = "warn"
match_wildcard_for_single_variants = "warn"
redundant_else = "warn"
items_after_statements = "warn"
single_match_else = "warn"
match_same_arms = "warn"
needless_pass_by_value = "warn"
trivially_copy_pass_by_ref = "warn"
unused_self = "warn"
unnecessary_wraps = "warn"
option_if_let_else = "warn"
or_fun_call = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
must_use_candidate = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
derive_partial_eq_without_eq = "warn"
derived_hash_with_manual_eq = "warn"
partialeq_ne_impl = "warn"
non_canonical_partial_ord_impl = "warn"
derive_ord_xor_partial_ord = "warn"
inherent_to_string = "warn"
to_string_trait_impl = "warn"
significant_drop_tightening = "warn"
cognitive_complexity = "warn"
too_many_lines = "warn"
too_many_arguments = "warn"
type_complexity = "warn"
approx_constant = "warn"

[workspace.metadata.kithara]

[workspace.metadata.kithara.tools]
cargo_sort = ".config/tomlfmt.toml"
clippy = "clippy.toml"
deny = "deny.toml"
rustfmt = "rustfmt.toml"
typos = ".config/typos.toml"

# Drives `cargo xtask apple single` (one self-contained xcframework for the
# CocoaPods / manual drag-in channels). Project-agnostic: point these at a
# different module/bundle to reuse the packaging tooling in another
# UniFFI + Swift workspace — the xtask reads them, nothing is hard-coded.
[workspace.metadata.apple]
framework-name = "Kithara"
bundle-id = "io.zvuk.Kithara"
short-version = "0.0.1"
# iOS 15 floor: consumer apps (e.g. Zvuk) still ship an iOS 15 minimum, and a
# module built for iOS 16 cannot be imported by an iOS 15 target.
deployment-target = "15.0"
autolink-frameworks = ["AudioToolbox", "CoreAudio", "AVFoundation", "Security", "SystemConfiguration"]

[workspace.package]
version = "0.0.1-alpha4"
edition = "2024"
rust-version = "1.89"
authors = ["kithara contributors"]
license = "MIT OR Apache-2.0"
description = "Networking + decoding building blocks for audio playback (not a full player)"
keywords = ["audio", "streaming", "hls", "decoder", "playback"]
categories = ["multimedia::audio"]
repository = "https://github.com/zvuk/kithara"
homepage = "https://github.com/zvuk/kithara"

[workspace.dependencies]
# Backend-bearing crates: default-features disabled at the workspace
# level so apple / android xcframework builds don't transitively pull
# symphonia (decode backend) or reqwest (HTTP backend) through the
# default feature set. Consumers that need the software decode backend
# opt in via `features = ["symphonia"]`; the HTTP backend is selected by
# `client-reqwest` (default) / `client-wreq` (apple/android device) which
# are global toggles on the single kithara-net package, re-forwarded by
# each crate's own `client-reqwest`/`client-wreq`/`tls-*` features. Cargo
# refuses default-features overrides through `workspace = true`
# inheritance, so the disable has to live here on the workspace
# declaration. kithara-events keeps its defaults because it never puts
# an HTTP backend in its own default, so it cannot leak reqwest.
# kithara-test-utils disables defaults at the workspace level so
# framework builds inherit the noop hang/test surface; test/dev edges
# opt back into `hang`.
kithara = { path = "crates/kithara", version = "0.0.1-alpha4", default-features = false }
kithara-abr = { path = "crates/kithara-abr", version = "0.0.1-alpha4", default-features = false }
kithara-app = { path = "crates/kithara-app", default-features = false }
kithara-apple = { path = "crates/kithara-apple", version = "0.0.1-alpha4" }
kithara-assets = { path = "crates/kithara-assets", version = "0.0.1-alpha4", default-features = false }
kithara-audio = { path = "crates/kithara-audio", version = "0.0.1-alpha4", default-features = false }
kithara-beat = { path = "crates/kithara-beat", version = "0.0.1-alpha4" }
kithara-bufpool = { path = "crates/kithara-bufpool", version = "0.0.1-alpha4" }
kithara-decode = { path = "crates/kithara-decode", version = "0.0.1-alpha4", default-features = false }
kithara-devtools = { path = "crates/kithara-devtools", version = "0.0.1-alpha4" }
kithara-drm = { path = "crates/kithara-drm", version = "0.0.1-alpha4" }
kithara-encode = { path = "crates/kithara-encode", version = "0.0.1-alpha4" }
kithara-events = { path = "crates/kithara-events", version = "0.0.1-alpha4" }
kithara-ffi = { path = "crates/kithara-ffi" }
kithara-file = { path = "crates/kithara-file", version = "0.0.1-alpha4", default-features = false }
kithara-hls = { path = "crates/kithara-hls", version = "0.0.1-alpha4", default-features = false }
kithara-net = { path = "crates/kithara-net", version = "0.0.1-alpha4", default-features = false }
kithara-platform = { path = "crates/kithara-platform", version = "0.0.1-alpha4" }
kithara-play = { path = "crates/kithara-play", version = "0.0.1-alpha4", default-features = false }
kithara-queue = { path = "crates/kithara-queue", version = "0.0.1-alpha4", default-features = false }
kithara-resampler = { path = "crates/kithara-resampler", version = "0.0.1-alpha4", default-features = false }
kithara-storage = { path = "crates/kithara-storage", version = "0.0.1-alpha4", default-features = false }
kithara-stream = { path = "crates/kithara-stream", version = "0.0.1-alpha4", default-features = false }
kithara-stretch = { path = "crates/kithara-stretch", version = "0.0.1-alpha4", default-features = false }
kithara-test-macros = { path = "crates/kithara-test-macros", version = "0.0.1-alpha4" }
kithara-test-utils = { path = "crates/kithara-test-utils", version = "0.0.1-alpha4", default-features = false }
kithara-workspace-hack = { path = "crates/kithara-workspace-hack", version = "0.0.1-alpha4" }

# misc
aes = "0.9.1"

# xtask tooling
anyhow = "1"

# fuzzing
arbitrary = { version = "1", features = ["derive"] }

arc-swap = "1.9"

# memory profiling
assert_no_alloc = "1.1"
async-stream = "0.3.6"

# async traits
async-trait = "0.1.89"
audioadapter-buffers = "3.0"
axum = "0.8.9"
backtrace = "0.3"
base64 = "0.22.1"
bevy_platform = { version = "0.19", default-features = false, features = ["alloc", "std", "web"] }
biquad = "0.6.0"

# delegation
bitflags = "2.13"

# Apple platform support
block2 = "0.6.2"

# storage (range maps + mmap)
bon = "3.9"
bungee-rs = "0.1.1"
bytecheck = "0.8.2"
bytes = "1.12.0"
cargo_metadata = "0.23"
cbc = "0.2.1"

# CLI
clap = { version = "4.6", features = ["derive", "env"] }
console_error_panic_hook = "0.1"
core-foundation = "0.10"
core-foundation-sys = "0.8"
cpal = { version = "0.18", default-features = false }
cpu-time = "1"

# crypto/obfuscation
crabtime = "1.1.4"

# performance monitoring
criterion = "0.8.2"
crossbeam-queue = "0.3"
crossterm = "0.29"
dashmap = "6.2.1"
dasp = { version = "0.11", features = ["interpolate", "interpolate-linear", "signal"] }
delegate = "0.13"
derive_more = { version = "2.1", features = ["deref", "display", "from"] }
dhat = "0.3"
fallible-iterator = "0.3"

# fast interleave/deinterleave
fast-interleave = "0.1"
fdk-aac = "0.8.0"
fdk-aac-sys = "0.5.0"
ffmpeg-next = "8.1.0"
firewheel = { version = "0.10.0", default-features = false, features = ["std", "tracing"] }
firewheel-web-audio = { version = "0.4.0", default-features = false }
futures = "0.3.32"
glob = "0.3"
gloo-timers = { version = "0.4", features = ["futures"] }

# hex encoding
hex = "0.4"
hls_m3u8 = "0.7.0"
hotpath = "0.19.1"
# Optional: unify lint settings later via workspace.metadata or deny.toml.

# UI frameworks
iced = { version = "0.14", features = ["tokio", "svg", "canvas"] }
iced_aw = { version = "0.14.1", default-features = false, features = ["tabs", "tab_bar", "selection_list"] }

# FFI
jni = "0.22"
js-sys = "0.3"
libfuzzer-sys = "0.4"
loom = { version = "0.7.2", features = ["checkpoint"] }
lru = "0.18"
memory-stats = "1.2"
mmap-io = { version = "1.0", default-features = false }
moka = { version = "0.12", features = ["sync"] }
ndk-context = "0.1.1"
num-traits = { version = "0.2", default-features = false }
obfstr = "0.4.5"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", default-features = false }
parking_lot = "0.12"
pin-project-lite = "0.2"
plist = "1"
portable-atomic = { version = "1.13.1", default-features = false, features = ["fallback", "float"] }

# proc macros
proc-macro2 = "1"
proptest = "1"
quote = "1"
rand = "0.10.2"
rangemap = { version = "1.7.1", features = ["serde1"] }
ratatui = "0.30.2"
re_mp4 = "0.5.0"
realfft = "3.5"
regex = "1"
reqwest = { version = "0.13.4", default-features = false }
ringbuf = "0.5.0"
rkyv = "0.8.17"
roxmltree = "0.20"
rstest = { version = "0.26.1", features = ["async-timeout", "crate-name"] }
# Beat detection NN inference (kithara-beat).
rten = { version = "0.24", features = ["fft"] }
rten-tensor = "0.24"
rubato = "3.0"
rustdoc-types = "0.60.0"
rustls-platform-verifier = "0.7.0"
send_wrapper = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.13"
serial_test = "3.5.0"
sha2 = "0.11"
# Time-stretch backends: C++ FFI, native-only, behind `stretch-*` features.
signalsmith-stretch = "0.1.3"
slice_ring_buf = "0.3"
smallvec = "1"
stats_alloc = "0.1"
symphonia = { version = "0.6.0", features = ["all", "opt-simd"] }
symphonia-core = "0.6.0"
symphonia-format-isomp4 = "0.6.0"
syn = { version = "2", features = ["full"] }
tempfile = "3.27.0"
thirtyfour = "0.37.1"
thiserror = "2.0.18"
thunderdome = { version = "0.6.1", default-features = false }
tokio = { version = "1.52.3", default-features = false }
tokio-stream = "0.1.18"
tokio_with_wasm = { version = "0.9", features = ["full"] }
toml = { version = "1.1", features = ["preserve_order"] }
tower = "0.5.3"
tower-http = { version = "0.7", features = ["cors", "fs", "set-header"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.44"
tracing-android = "0.2.0"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt", "registry"] }
tracing-wasm = "0.2"
uniffi = { version = "0.31.2", default-features = false }
unimock = { version = "0.6", features = ["std"] }
url = "2.5.8"
usdt = { version = "0.6", default-features = false, features = ["asm"] }
uuid = { version = "1", features = ["v5"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
wasm_safe_thread = "0.1.1"
web-sys = { version = "0.3", features = ["Blob", "BroadcastChannel", "console", "DedicatedWorkerGlobalScope", "Document", "Element", "Event", "EventTarget", "File", "FileList", "FileReader", "HtmlElement", "HtmlInputElement", "MessageEvent", "Window"] }
web-time = "1.1"
wreq = "5"
wreq-util = "2"

# Optimise CPU-heavy audio dependencies in debug builds so the audio
# worker thread can keep up with real-time playback.  Without this,
# rubato's sinc interpolation and Symphonia's MP3 decode are ~30×
# slower in debug due to Rust's runtime UB/alignment checks.
[profile.dev.package.rubato]
opt-level = 2
[profile.dev.package.symphonia]
opt-level = 2
[profile.dev.package.symphonia-core]
opt-level = 2
[profile.dev.package.symphonia-bundle-mp3]
opt-level = 2
[profile.dev.package.symphonia-codec-aac]
opt-level = 2
[profile.dev.package.symphonia-bundle-flac]
opt-level = 2
[profile.dev.package.symphonia-format-isomp4]
opt-level = 2
# Playback decode adapters monomorphise Rubato's sinc resampler when enabled,
# and `kithara-decode` drives the per-frame demux/decode loop; both are as
# debug-slow as the upstream codecs above when left at opt-0 (~100s of ms per
# chunk). Harmless under real-time playback (decode overlaps the real download),
# but under `flash` the decode sits on the critical path (the virtual clock
# waits for it), so the debug cost dominates wall-clock and stalls tests.
[profile.dev.package.kithara-audio]
opt-level = 2
[profile.dev.package.kithara-decode]
opt-level = 2
[profile.dev.package.kithara-workspace-hack]
opt-level = 2
# Time-stretch DSP (FFT/phase-vocoder + C++) is ~10× slower in debug.
[profile.dev.package.signalsmith-stretch]
opt-level = 3
# rten float inference is orders of magnitude slower unoptimised.
[profile.dev.package.rten]
opt-level = 3
[profile.dev.package.rten-tensor]
opt-level = 3
[profile.dev.package.rten-gemm]
opt-level = 3
[profile.dev.package.rten-simd]
opt-level = 3
[profile.dev.package.rten-vecmath]
opt-level = 3
[profile.dev.package.rten-base]
opt-level = 3
[profile.dev.package.bungee-sys]
opt-level = 3

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"
strip = "symbols"

# Best-of-both-worlds profile for maximum testing speed.
# Combines release-grade runtime performance (opt-level 3) with fast
# parallel compilation (codegen-units 16, LTO off).
[profile.test-release]
inherits = "release"
opt-level = 3
debug = "line-tables-only"
debug-assertions = true
overflow-checks = true
lto = false
codegen-units = 16
panic = "unwind"
strip = "none"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[patch.crates-io]
firewheel-web-audio = { git = "https://github.com/gerasim13/firewheel-web-audio", rev = "1a5e383af4d5d318f93d6d25e617cc95d7b20aef" }
