[package]
name = "kithara-examples"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
kithara = { workspace = true, features = ["file", "hls", "rodio"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { workspace = true, features = ["playback"] }

[[example]]
name = "file_audio"

[[example]]
name = "hls_audio"

[[example]]
name = "hls_drm_audio"

[[example]]
name = "file_rodio"

[[example]]
name = "hls_rodio"

[[example]]
name = "resource_rodio"
