[package]
name = "kithara-examples"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
kithara = { workspace = true, features = ["file", "hls"] }
kithara-platform = { workspace = true }
url = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
