[package]
name = "kithara-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
kithara-drm = { path = "../crates/kithara-drm" }
hls_m3u8 = "0.5.1"

[[bin]]
name = "aes_decrypt"
path = "fuzz_targets/aes_decrypt.rs"
doc = false

[[bin]]
name = "hls_parsing"
path = "fuzz_targets/hls_parsing.rs"
doc = false
