[package]
name = "kithara-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
autotests = false

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["serial_test"]

# Cross-platform dependencies (used by both native and WASM tests)
[dependencies]
kithara = { workspace = true, features = ["full", "test-utils", "internal"] }
kithara-audio = { workspace = true, features = ["internal", "test-utils"] }
kithara-assets = { workspace = true }
kithara-bufpool = { workspace = true, features = ["internal"] }
kithara-drm = { workspace = true }
kithara-events = { workspace = true }
kithara-hls = { workspace = true, features = ["internal"] }
kithara-queue = { workspace = true }
kithara-app = { workspace = true, default-features = false, features = ["lib-only"] }
kithara-test-utils = { workspace = true }
rkyv = { workspace = true }
kithara-net = { workspace = true, features = ["test-utils"] }
kithara-platform = { workspace = true }
kithara-storage = { workspace = true }
kithara-stream = { workspace = true }
# Async runtime
tokio-util = { workspace = true }

# Channels/buffers
bytes = { workspace = true }

# HTTP/URL
url = { workspace = true }

rodio = { workspace = true }

# Testing framework
tempfile = { workspace = true }
serial_test = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto (for HLS encryption tests)
aes = { workspace = true }
cbc = { workspace = true }

# Misc
futures = { workspace = true }

# Async traits
async-trait = { workspace = true }

# --- Native-only dependencies ---
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Additional kithara features (rodio not available on WASM)
kithara = { workspace = true, features = ["rodio"] }
kithara-decode = { workspace = true, features = ["test-utils"] }
kithara-file = { workspace = true }
kithara-play = { workspace = true, features = ["backend-cpal", "internal", "test-utils"] }

# Additional tokio features (full runtime on native)
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }

# HTTP server (axum stack not available on WASM)
reqwest = { workspace = true, features = ["rustls", "stream"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Native audio playback (adds playback feature requiring cpal)
rodio = { workspace = true, features = ["playback"] }

# Mocking
unimock = { workspace = true }

# Storage
mmap-io = { workspace = true }

# WebDriver automation
thirtyfour = { workspace = true }

# Performance monitoring (optional)
hotpath = { workspace = true, optional = true }

# RSS memory profiling
memory-stats = { workspace = true }
assert_no_alloc = { workspace = true }
ringbuf = { workspace = true }
tokio-stream = { workspace = true }

# --- WASM-only dependencies ---
[target.'cfg(target_arch = "wasm32")'.dependencies]
kithara-test-macros = { workspace = true }

# WASM-specific
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-test = { workspace = true }
web-sys = { workspace = true }
gloo-timers = { workspace = true }
tracing-wasm = { workspace = true }
console_error_panic_hook = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }
kithara-abr = { workspace = true, features = ["internal"] }

[features]
perf = [
    "dep:hotpath",
    "hotpath/hotpath",
    "kithara/perf",
]

[[bin]]
name = "test_server"
path = "bin/test_server.rs"
test = false

[[bin]]
name = "wasm_test_runner"
path = "bin/wasm_test_runner.rs"
test = false

[[test]]
name = "red_env_guard_leak_thread"
path = "tests/red_env_guard_leak_thread.rs"

[[test]]
name = "suite_light"
path = "tests/suite_light.rs"

[[test]]
name = "suite_heavy"
path = "tests/suite_heavy.rs"

[[test]]
name = "suite_stress"
path = "tests/suite_stress.rs"

[[test]]
name = "suite_perf"
path = "perf/suite_perf.rs"
required-features = ["perf"]

[[test]]
name = "memory_rss"
path = "perf/memory_rss.rs"
required-features = ["perf"]

[[bench]]
name = "refactor_hotpaths"
harness = false

[[bench]]
name = "bufpool"
harness = false

[[bench]]
name = "abr_estimator"
harness = false
